--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Journey</h1>
     <div class="container">
         <div class="card">
-            <h2>Introduction</h2>
+            <a href="/DSA/Basic/basics_of_cpp"><h2>Introduction</h2></a>
             <p>Data Structures and Algorithms (DSA) are the building blocks of computer science. They are essential for writing efficient and scalable code.</p>
         <div class="card">
             <h2>Array</h2>
